TODO
* pyvshadow
  - work on store
* remove hard coded 0x4000 block size
  - use or pass io handle block size instead
* add tests
  - create test image
  - create test plan
  - test and add ignore overlay when reading from next store
* multi-threading support
  - what about abort value?
* beta
  - fix open issues
* add libfdata and libfcache for caching ?

API:
* allow access to block list
  - finish and expose libvshadow_store_get_block()
  - split block list and run-time btree
* get operating machine string
* get service machine string
* get size
* is open
* finish store close function

Error tollerance:
* add support for catalog entry 3 defined before 2

Format:
* how are multiple copies per set stored?
* the store file can be fragmented
  - block range list defines the fragments ?
* what about trailing volume data that windows is hiding 0x1000 bytes in size ?
  also seen in BDE, so likely something of NTFS

Tools:
* vshadowexport
  - create tool to export a VSS volume ?
* vshadowinfo
  - print attribute flags description
* vshadowmount
  - dokan fix volume size hints

20131203
* worked on Python bindings
  - subtle bug fix where python file-like object returns an int object
    instead of long object
  - improved error reporting
* updated libcerror

20131003
* Updated dependencies
* worked on setup.py, largely for MSI builds
* updated msvscpp files

20130723
* fixes for 32-bit WINAPI build of pyvshadow in file object glue code

20130721
* Changes for stand-alone libbfio build
* updated msvscpp files

20130718
* remove unnecessary restriction in library include headers
* updated dependencies

20130509
* worked on multi-threading support

20130505
* added libvshadow_volume_get_store_identifier function
* worked on multi-threading support
* slight improvement of error tolerability of catalog parsing

20130504
* added libcthreads
* worked on multi-threading support
* changes to read block descriptors on demand improves vshadowinfo preformance
* worked on tests