@@ -2,7 +2,7 @@ AC_PREREQ( 2.59 )
 
 AC_INIT(
  [libvshadow],
- [20131203],
+ [20131209],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
